--- a/4Space.html
+++ b/4Space.html
@@ -20,7 +20,7 @@
 					<li class="active"><a href="4Space.html">4Space</a></li>
 					<li><a href="MattCore.html">MattCore</a></li>
 					<li><a href="https://github.com/4-Space" target="_blank">Github</a></li>
-					<li><a href="contact.html">Contact Me</a></li>
+					<li><a href="about.html">About Me</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -48,6 +48,16 @@
 							<th>Galacticraft</th>							
 							<th>MattCore</th>
 							<th>4Space</th>    
+						</tr>
+						
+						<!-- 4.0.5 -->
+						<tr>
+							<td>1.7</td>  
+							<td>4.0.5</td>    
+							<td>11/29/2014</td> 							
+							<td><a href="http://micdoodle8.com/download">3.0.6.233</a></td>
+							<td><a href="MattCore.html#downloads">4.0.1</a></td>
+							<td><a href="http://adf.ly/7973672/4space-17-405">4Space</a></td>    
 						</tr>
 						
 						<!-- 4.0.4 -->
