--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<title>Mattparks | MattCore</title>
+		<title>Mattparks | About</title>
 		<link rel="icon" type="image/png" href="img/favicon.ico">
 		
 		<link rel="stylesheet" href="style.css" type="text/css" />
@@ -20,12 +20,22 @@
 					<li><a href="4Space.html">4Space</a></li>
 					<li><a href="MattCore.html">MattCore</a></li>
 					<li><a href="https://github.com/4-Space" target="_blank">Github</a></li>
-					<li class="active"><a href="contact.html">Contact Me</a></li>
+					<li class="active"><a href="about.html">About Me</a></li>
 				</ul>
 			</nav>
 		</header>
 		
 		<div class="mainContent">
+			<article class="blogContent">	
+				<header>
+					<h2><a href="#" rel="bookmark" title="Permalink to this POST TITLE">About Me:</a></h2>
+				</header>
+				<content>
+					<p>Hi there!</p>
+					<p>My name is Matthew Albrecht but my gamer tag is Mattparks, I am a self taught 14 year old Java, C++, HTML, CSS, JavaScript and Assembly developer who is always looking for a way to learn more about computers. Recently I have been making a minecraft mod called 4Space, this mod adds most of the original worlds from micdoodle8's Galacticraft mod and even more more worlds to the most current version of Galacticraft. I try to make my planets as realistic as passable without sacrificing gameplay. All of my code is open source and I always try to improve upon my mod.</p>
+				</content>		
+			</article>	
+		
 			<article class="blogContent" id="about">	
 				<header>
 					<h2><a href="#" rel="bookmark" title="Permalink to this POST TITLE">Contact:</a></h2>
