--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<li><a href="4Space.html">4Space</a></li>
 					<li><a href="MattCore.html">MattCore</a></li>
 					<li><a href="https://github.com/4-Space" target="_blank">Github</a></li>
-					<li><a href="contact.html">Contact Me</a></li>
+					<li><a href="about.html">About Me</a></li>
 				</ul>
 			</nav>
 		</header>
