--- a/MattCore.html
+++ b/MattCore.html
@@ -7,8 +7,8 @@
 		<link rel="stylesheet" href="style.css" type="text/css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<script type="text/javascript" src="img/jquery.min.js"></script>
-		<script type="text/javascript" src="img/arrow.js"></script>
+		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="js/arrow.js"></script>
 	</head>
 	
 	<body>
@@ -20,7 +20,7 @@
 					<li><a href="4Space.html">4Space</a></li>
 					<li class="active"><a href="MattCore.html">MattCore</a></li>
 					<li><a href="https://github.com/4-Space" target="_blank">Github</a></li>
-					<li><a href="contact.html">Contact Me</a></li>
+					<li><a href="about.html">About Me</a></li>
 				</ul>
 			</nav>
 		</header>
